# ITK_Torch

./: README.md  torch_model.cpp
Torch-Scripts/: CMakeLists.txt  generate_transforms.py  main.cpp  onnx_1.py
array_/: a.out  array_1.cpp
examples/pose_landmarker/python/: [MediaPipe_Python_Tasks]_Pose_Landmarker.ipynb
feature-1/: feature-1.txt
infer_libtorch_/: CMakeLists.txt  main.cpp  main_1.cpp
read_dicom/: CMakeLists.txt  main copy.cpp  main.cpp  torch_model.cpp
